[package]
name = "dashql-core"
version = "0.1.0"
edition = "2018"

[lib]
name = "dashql_core"
path = "src/lib.rs"
crate-type = ["lib"]
test = true
doctest = false

[[bin]]
name = "dashql_dump"
path = "src/bin/dump.rs"
test = false
doctest = false

[[bin]]
name = "dashql_dvms"
path = "src/bin/dvms.rs"
test = false
doctest = false

[dependencies]
dashql-proto = { path = "../dashql-proto" }
dashql-parser = { path = "../dashql-parser-sys" }
duckdbx = { path = "../duckdbx-api" }
async-trait = "0.1.56"
arrow = { version = "14.0.0", features = ['ipc'] }
futures = "0.3.21"
smallvec = "1.8.0"
bumpalo = "3.9.1"
flatbuffers = "2.1.1"
libc = "0.2.121"
serde_json = "1.0"
serde = { version = "1.0.136", features = ['derive'] }
quick-xml = { version = "0.22.0", features = ['serialize'] }
clap = "2.33.3"
log = "0.4.0"
env_logger = "0.8.3"
pretty_assertions = "1.2.1"
reqwest = "0.11.10"

duckdbx-sys = { path = "../duckdbx-sys", optional = true }
tokio = { version = "1.19.2", features = ["rt", "macros"], optional = true }

wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.24", optional = true }
js-sys = { version = "0.3.51", optional = true }
getrandom = { version = "0.2.6", features = ["js"], optional = true }

[features]
native = ['dep:duckdbx-sys', 'dep:tokio']
wasm = ['dep:js-sys', 'dep:getrandom', 'dep:wasm-bindgen', 'dep:wasm-bindgen-futures']
default = []
