[package]
name = "dashql-core"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
test = true
doctest = false

[[bin]]
name = "dump"
path = "src/bin/dump.rs"
test = false
doctest = false

[dependencies]
dashql-proto = { path = "../dashql-proto" }
async-trait = "0.1.56"
arrow = { version = "14.0.0", features = ['ipc'] }
futures = "0.3.21"
smallvec = "1.8.0"
bumpalo = "3.9.1"
flatbuffers = "2.1.1"
libc = "0.2.121"
serde_json = "1.0"
serde = { version = "1.0.136", features = ['derive'] }
quick-xml = { version = "0.22.0", features = ['serialize'] }
clap = "2.33.3"
log = "0.4.0"
env_logger = "0.8.3"
pretty_assertions = "1.2.1"

# Native
duckdbx-sys = { path = "../duckdbx-sys", optional = true }
tokio = { version = "1.19.2", features = ["rt", "macros"], optional = true }
dashql-parser = { path = "../dashql-parser-sys", optional = true }

# Node
neon = { version = "0.10", features = ["napi-6", "channel-api"], default-features = false, optional = true }

# Wasm
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.24", optional = true }
js-sys = { version = "0.3.51", optional = true }
getrandom = { version = "0.2.6", features = ["js"], optional = true }

[features]
tests = ['native']
native = ['duckdbx-sys', 'dashql-parser', 'tokio']
node = ['native', 'neon']
wasm = ['js-sys', 'getrandom', 'wasm-bindgen', 'wasm-bindgen-futures']
default = ['tests']
