[package]
name = "duckdbx-api"
version = "0.1.0"
authors = ["Andre Kohn <kohn.a@outlook.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.56"
log = "0.4.14"
arrow = { version = "14.0.0", features = ["csv", "ipc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.51"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
duckdbx = { path = "../duckdbx-sys" }
tokio = { version = "1.19.2", features = ["rt", "macros"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
lto = true
opt-level = "s"
