[package]
name = "duckdbx"
version = "0.1.0"
authors = ["Andre Kohn <kohn.a@outlook.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[profile.release]
lto = true
opt-level = "s"

[dependencies]
async-trait = "0.1.56"
log = "0.4.14"
arrow = { version = "14.0.0", features = ["csv", "ipc"] }
futures = "0.3.21"

duckdbx-sys = { path = "../duckdbx-sys", optional = true }
tokio = { version = "1.19.2", features = ["rt", "macros"], optional = true }

wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.24", optional = true }
js-sys = { version = "0.3.51", optional = true }
getrandom = { version = "0.2.6", features = ["js"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[features]
native = ['dep:duckdbx-sys', 'dep:tokio']
wasm = ['dep:js-sys', 'dep:getrandom', 'dep:wasm-bindgen', 'dep:wasm-bindgen-futures']
default = []
