[package]
name = "duckdb_webapi_proto"
version = "0.1.0"
authors = ["Andre Kohn <kohn.a@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[build-dependencies]
cmake = "0.1.44"
